# VibeToText

./: .gitignore  BUILDING.md  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
scripts/: stage-bundle-resources.cjs
src/: index.html  main.js  overlay.css  overlay.html  overlay.js  styles.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/bundle-resources/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: analytics.rs  audio.rs  config.rs  inject.rs  lib.rs  main.rs  models.rs  modifier_hook.rs  stt.rs  vad.rs
src-tauri/src/stt/: moonshine.rs  whisper.rs
